--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=CCMS
-spring.datasource.url=jdbc:mysql://localhost:3306/agentlist
+spring.datasource.url=jdbc:mysql://agentlist.cz00ua42wh0g.us-east-1.rds.amazonaws.com:3306/agentlist
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root1234
 spring.jpa.hibernate.ddl-auto=update
-server.port=8081
+server.port=5000
